--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
   <h2>About Me</h2>
   <div class="card">
     <p>
-      I am a PhD Research Scholar in Zoology at JAIN (Deemed-to-be) University, Bengaluru, working at the Centre for Urban Ecology, Biodiversity, Evolution & Climate Change (CUBEC). My research focuses on how rapid urbanisation and urban heat island effects shape morphology, performance, and physiology in reptiles.
+      I am a PhD Research Scholar in Zoology at <strong>JAIN (Deemed-to-be) University, Bengaluru</strong>, affiliated with the <strong>Centre for Urban Ecology, Biodiversity, Evolution & Climate Change (CUBEC)</strong>. My doctoral work focuses on understanding how rapid urbanisation and urban heat island effects influence morphology, locomotor performance, and physiological tolerance in reptiles.
     </p>
     <p>
-      I use geckos as a model system to understand urban adaptation, natural selection, and evolutionary trajectories in human-modified landscapes.
+      I use geckos as a model system to study urban adaptation and evolutionary responses to climate-related stressors in human-modified landscapes. Alongside research, I am actively involved in teaching environmental science, climate change, and research methodology.
     </p>
   </div>
 </section>
@@ -158,16 +158,20 @@
   <h2>Research Interests</h2>
   <div class="grid">
     <div class="card">
-      <strong>Urban Evolution</strong>
-      <p>Phenotypic divergence and adaptation in urban vs rural populations.</p>
+      <strong>Urban Evolution & Adaptation</strong>
+      <p>Phenotypic divergence and natural selection across urban–rural gradients.</p>
     </div>
     <div class="card">
       <strong>Thermal & Performance Ecology</strong>
-      <p>Thermal tolerance, sprint performance, and stress physiology.</p>
+      <p>Locomotor performance, thermal tolerance (CTmax/CTmin), and stress physiology.</p>
     </div>
     <div class="card">
       <strong>Climate Change Biology</strong>
       <p>Urban heat islands as proxies for future climate scenarios.</p>
+    </div>
+    <div class="card">
+      <strong>Urban Biodiversity & Ecology</strong>
+      <p>Species–area relationships, microhabitat use, and biodiversity patterns.</p>
     </div>
   </div>
 </section>
@@ -176,10 +180,10 @@
   <h2>Current PhD Project</h2>
   <div class="card">
     <p>
-      My doctoral research investigates morphometric divergence, locomotor performance, and physiological tolerance in urban and rural populations of <em>Hemidactylus parvimaculatus</em> (nocturnal) and <em>Cnemaspis mysoriensis</em> (diurnal) across Bengaluru.
+      <strong>Characterising morphometric, locomotor, and physiological adaptations to urban heat</strong> in two gecko species — the nocturnal <em>Hemidactylus parvimaculatus</em> and the diurnal <em>Cnemaspis mysoriensis</em> — across an urban–rural gradient in Bengaluru.
     </p>
     <p>
-      The project integrates field sampling, controlled laboratory experiments, and statistical modelling to understand how urban environments drive evolutionary change.
+      The project integrates extensive field sampling, controlled laboratory experiments, and statistical modelling to understand how urban environments shape evolutionary trajectories in ectotherms.
     </p>
   </div>
 </section>
@@ -188,12 +192,14 @@
   <h2>Methods & Skills</h2>
   <div class="card">
     <div class="tag">R & Statistical Modelling</div>
-    <div class="tag">Linear & Mixed Models</div>
-    <div class="tag">PCA / Multivariate Analysis</div>
-    <div class="tag">Thermal Tolerance Experiments</div>
-    <div class="tag">Locomotor Performance Assays</div>
+    <div class="tag">Linear & Mixed-Effects Models</div>
+    <div class="tag">PCA & Multivariate Analysis</div>
     <div class="tag">Morphometrics</div>
+    <div class="tag">Locomotor Performance Assays</div>
+    <div class="tag">Thermal Tolerance Experiments</div>
     <div class="tag">Field Ecology</div>
+    <div class="tag">ArcGIS</div>
+    <div class="tag">ImageJ</div>
   </div>
 </section>
 
@@ -201,8 +207,9 @@
   <h2>Publications & Manuscripts</h2>
   <div class="card">
     <ul>
-      <li><strong>Manuscript in preparation:</strong> Morphometric divergence between urban and rural gecko populations in Bengaluru.</li>
-      <li><strong>Ongoing:</strong> Locomotor performance and thermal adaptation under urban heat island conditions.</li>
+      <li><strong>Manuscript (in preparation):</strong> Morphometric divergence between urban and rural populations of geckos in Bengaluru, India.</li>
+      <li><strong>Submitted:</strong> A new locale for an old pattern? Species–area relationships across golf courses in Karnataka.</li>
+      <li><strong>Book Review (2024):</strong> <em>Urban Evolutionary Biology</em>, Journal of Animal Diversity.</li>
     </ul>
   </div>
 </section>
@@ -211,8 +218,9 @@
   <h2>Conference Talks & Posters</h2>
   <div class="card">
     <ul>
-      <li>Society for Integrative and Comparative Biology (SICB), 2026 — Oral Presentation</li>
-      <li>National & University-level research symposia (Posters & Talks)</li>
+      <li><strong>SICB 2026 (USA):</strong> Oral presentation — <em>Climbing the urban ladder: Locomotor performance of urban and rural geckos in Bengaluru, India</em>.</li>
+      <li><strong>International Conference on Behavioural Studies & Environmental Influence (2025):</strong> Oral presentation on urban morphometric adaptation in <em>Cnemaspis mysoriensis</em>.</li>
+      <li><strong>ISEB 2024:</strong> Poster presentation on morphometric variation in <em>Hemidactylus parvimaculatus</em>.</li>
     </ul>
   </div>
 </section>
@@ -221,9 +229,10 @@
   <h2>Teaching & Courses</h2>
   <div class="card">
     <ul>
-      <li>Environmental Studies (EVS) – Practical & Theory Modules</li>
-      <li>Climate Change & Sustainability</li>
-      <li>Research Methodology (Undergraduate)</li>
+      <li>Guest Faculty — Climate Change & Sustainability (MA English), JAIN University</li>
+      <li>Guest Faculty — Environmental Science (BA Design), JAIN University</li>
+      <li>Guest Faculty — Research Methodology (MA Communication Design)</li>
+      <li>Visiting Faculty — Environmental Science, MS Ramaiah College</li>
     </ul>
   </div>
 </section>
@@ -240,9 +249,9 @@
 <section id="contact">
   <h2>Contact</h2>
   <div class="card contact">
-    <p>Email: <a href="mailto:amith.sj@jainuniversity.ac.in">amith.sj@jainuniversity.ac.in</a></p>
-    <p>Google Scholar: <em>Link to be added</em></p>
-    <p>ORCID: <em>Link to be added</em></p>
+    <p>Email: <a href="mailto:amithsj104@gmail.com">amithsj104@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/amith-s-j/" target="_blank">amith-s-j</a></p>
+    <p>Affiliation: CUBEC, JAIN (Deemed-to-be University), Bengaluru, India</p>
   </div>
 </section>
 
@@ -254,3 +263,4 @@
 
 </body>
 </html>
+
