--- a/index.html
+++ b/index.html
@@ -2,135 +2,140 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Amith S J | PhD Researcher</title>
+
+  <!-- Font Awesome Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
+
   <style>
     :root {
-      --primary: #1f4e79;
-      --secondary: #2f6f95;
-      --accent: #5aa9e6;
-      --bg: #f8fafc;
-      --text: #1e293b;
-      --muted: #64748b;
+      --primary:#1f4e79;
+      --secondary:#2f6f95;
+      --accent:#5aa9e6;
+      --bg:#f8fafc;
+      --text:#1e293b;
+      --muted:#64748b;
     }
 
-    * { box-sizing: border-box; }
-
-    body {
-      margin: 0;
-      font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      background: var(--bg);
-      color: var(--text);
-      line-height: 1.6;
+    body{
+      margin:0;
+      font-family:Segoe UI, Roboto, Arial, sans-serif;
+      background:var(--bg);
+      color:var(--text);
+      line-height:1.6;
     }
 
-    header {
-      background: linear-gradient(120deg, var(--primary), var(--secondary));
-      color: white;
-      padding: 3rem 1.5rem;
+    header{
+      background:linear-gradient(120deg,var(--primary),var(--secondary));
+      color:white;
+      padding:3rem 1.5rem;
     }
 
-    header h1 {
-      margin: 0;
-      font-size: 2.4rem;
+    header h1{margin:0;font-size:2.4rem;}
+    header p{margin-top:0.5rem;font-size:1.1rem;opacity:0.95;}
+
+    nav{
+      margin-top:1.5rem;
+      display:flex;
+      flex-wrap:wrap;
+      gap:1rem;
     }
 
-    header p {
-      margin-top: 0.5rem;
-      font-size: 1.1rem;
-      opacity: 0.95;
+    nav a{
+      color:white;
+      text-decoration:none;
+      font-size:0.95rem;
+      opacity:0.9;
     }
 
-    nav {
-      margin-top: 1.5rem;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1rem;
+    nav a:hover{text-decoration:underline;opacity:1;}
+
+    main{
+      max-width:1100px;
+      margin:auto;
+      padding:2.5rem 1.5rem;
     }
 
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-size: 0.95rem;
-      opacity: 0.9;
+    section{margin-bottom:3rem;}
+
+    section h2{
+      color:var(--primary);
+      font-size:1.6rem;
+      margin-bottom:1rem;
+      border-bottom:2px solid var(--accent);
+      display:inline-block;
+      padding-bottom:0.3rem;
     }
 
-    nav a:hover { opacity: 1; text-decoration: underline; }
-
-    main {
-      max-width: 1100px;
-      margin: auto;
-      padding: 2.5rem 1.5rem;
+    .card{
+      background:white;
+      padding:1.5rem;
+      border-radius:10px;
+      box-shadow:0 8px 20px rgba(0,0,0,0.05);
     }
 
-    section {
-      margin-bottom: 3rem;
+    .grid{
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+      gap:1.5rem;
     }
 
-    section h2 {
-      color: var(--primary);
-      font-size: 1.6rem;
-      margin-bottom: 1rem;
-      border-bottom: 2px solid var(--accent);
-      display: inline-block;
-      padding-bottom: 0.3rem;
+    ul{padding-left:1.2rem;}
+    li{margin-bottom:0.8rem;}
+
+    .tag{
+      display:inline-block;
+      background:#e0f2fe;
+      color:#075985;
+      padding:0.25rem 0.6rem;
+      border-radius:6px;
+      font-size:0.8rem;
+      margin:0.2rem;
     }
 
-    .card {
-      background: white;
-      padding: 1.5rem;
-      border-radius: 10px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.05);
-      margin-bottom: 1.5rem;
+    /* Social / Academic Icons */
+    .icon-grid{
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+      gap:1rem;
+      margin-top:1rem;
     }
 
-    ul {
-      padding-left: 1.2rem;
+    .icon-link{
+      display:flex;
+      align-items:center;
+      gap:0.6rem;
+      font-size:0.95rem;
+      text-decoration:none;
+      color:var(--primary);
     }
 
-    li { margin-bottom: 0.5rem; }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 1.5rem;
+    .icon-link i{
+      font-size:1.2rem;
+      color:var(--secondary);
     }
 
-    .tag {
-      display: inline-block;
-      background: #e0f2fe;
-      color: #075985;
-      padding: 0.25rem 0.6rem;
-      border-radius: 6px;
-      font-size: 0.8rem;
-      margin: 0.2rem;
+    footer{
+      text-align:center;
+      padding:2rem 1rem;
+      background:#e2e8f0;
+      color:var(--muted);
+      font-size:0.9rem;
     }
-
-    footer {
-      text-align: center;
-      padding: 2rem 1rem;
-      background: #e2e8f0;
-      color: var(--muted);
-      font-size: 0.9rem;
-    }
-
-    .contact a {
-      color: var(--primary);
-      text-decoration: none;
-    }
-
-    .contact a:hover { text-decoration: underline; }
-
   </style>
 </head>
+
 <body>
 
 <header>
   <h1>Amith S J</h1>
-  <p>PhD Research Scholar | Urban Ecology • Evolutionary Biology • Climate Change</p>
+  <p>PhD Research Scholar | Urban Ecology • Evolution • Climate Change</p>
   <nav>
     <a href="#about">About</a>
     <a href="#research">Research</a>
+    <a href="#education">Education</a>
+    <a href="#project">PhD Project</a>
     <a href="#methods">Methods</a>
     <a href="#publications">Publications</a>
     <a href="#talks">Talks</a>
@@ -146,10 +151,12 @@
   <h2>About Me</h2>
   <div class="card">
     <p>
-      I am a PhD Research Scholar in Zoology at <strong>JAIN (Deemed-to-be) University, Bengaluru</strong>, affiliated with the <strong>Centre for Urban Ecology, Biodiversity, Evolution & Climate Change (CUBEC)</strong>. My doctoral work focuses on understanding how rapid urbanisation and urban heat island effects influence morphology, locomotor performance, and physiological tolerance in reptiles.
+      I am a PhD Research Scholar in Zoology at <strong>JAIN (Deemed-to-be) University, Bengaluru</strong>,
+      working at the <strong>Centre for Urban Ecology, Biodiversity, Evolution & Climate Change (CUBEC)</strong>.
     </p>
     <p>
-      I use geckos as a model system to study urban adaptation and evolutionary responses to climate-related stressors in human-modified landscapes. Alongside research, I am actively involved in teaching environmental science, climate change, and research methodology.
+      My research explores how rapid urbanisation and urban heat island effects shape morphology,
+      locomotor performance, and physiological tolerance in reptiles, using geckos as a model system.
     </p>
   </div>
 </section>
@@ -157,22 +164,21 @@
 <section id="research">
   <h2>Research Interests</h2>
   <div class="grid">
-    <div class="card">
-      <strong>Urban Evolution & Adaptation</strong>
-      <p>Phenotypic divergence and natural selection across urban–rural gradients.</p>
-    </div>
-    <div class="card">
-      <strong>Thermal & Performance Ecology</strong>
-      <p>Locomotor performance, thermal tolerance (CTmax/CTmin), and stress physiology.</p>
-    </div>
-    <div class="card">
-      <strong>Climate Change Biology</strong>
-      <p>Urban heat islands as proxies for future climate scenarios.</p>
-    </div>
-    <div class="card">
-      <strong>Urban Biodiversity & Ecology</strong>
-      <p>Species–area relationships, microhabitat use, and biodiversity patterns.</p>
-    </div>
+    <div class="card"><strong>Urban Evolution</strong><p>Urban–rural divergence and adaptation.</p></div>
+    <div class="card"><strong>Thermal Biology</strong><p>CTmax, CTmin, thermal performance.</p></div>
+    <div class="card"><strong>Performance Ecology</strong><p>Locomotion, sprint speed, climbing.</p></div>
+    <div class="card"><strong>Climate Change Biology</strong><p>Urban heat islands as climate analogues.</p></div>
+  </div>
+</section>
+
+<section id="education">
+  <h2>Education</h2>
+  <div class="card">
+    <ul>
+      <li><strong>PhD in Zoology</strong> — JAIN University, Bengaluru (2022–Present)</li>
+      <li><strong>MSc in Zoology</strong> — CHRIST University, Bengaluru (2020–2022)</li>
+      <li><strong>BSc (Chemistry, Botany, Zoology)</strong> — CHRIST University, Bengaluru (2017–2020)</li>
+    </ul>
   </div>
 </section>
 
@@ -180,10 +186,8 @@
   <h2>Current PhD Project</h2>
   <div class="card">
     <p>
-      <strong>Characterising morphometric, locomotor, and physiological adaptations to urban heat</strong> in two gecko species — the nocturnal <em>Hemidactylus parvimaculatus</em> and the diurnal <em>Cnemaspis mysoriensis</em> — across an urban–rural gradient in Bengaluru.
-    </p>
-    <p>
-      The project integrates extensive field sampling, controlled laboratory experiments, and statistical modelling to understand how urban environments shape evolutionary trajectories in ectotherms.
+      Characterising morphometric, locomotor, and physiological adaptations to urban heat in
+      <em>Hemidactylus parvimaculatus</em> and <em>Cnemaspis mysoriensis</em> across Bengaluru.
     </p>
   </div>
 </section>
@@ -191,15 +195,14 @@
 <section id="methods">
   <h2>Methods & Skills</h2>
   <div class="card">
-    <div class="tag">R & Statistical Modelling</div>
-    <div class="tag">Linear & Mixed-Effects Models</div>
-    <div class="tag">PCA & Multivariate Analysis</div>
-    <div class="tag">Morphometrics</div>
-    <div class="tag">Locomotor Performance Assays</div>
-    <div class="tag">Thermal Tolerance Experiments</div>
-    <div class="tag">Field Ecology</div>
-    <div class="tag">ArcGIS</div>
-    <div class="tag">ImageJ</div>
+    <span class="tag">R</span>
+    <span class="tag">Linear & Mixed Models</span>
+    <span class="tag">PCA</span>
+    <span class="tag">Morphometrics</span>
+    <span class="tag">Sprint Performance</span>
+    <span class="tag">Thermal Experiments</span>
+    <span class="tag">ArcGIS</span>
+    <span class="tag">ImageJ</span>
   </div>
 </section>
 
@@ -207,9 +210,9 @@
   <h2>Publications & Manuscripts</h2>
   <div class="card">
     <ul>
-      <li><strong>Manuscript (in preparation):</strong> Morphometric divergence between urban and rural populations of geckos in Bengaluru, India.</li>
-      <li><strong>Submitted:</strong> A new locale for an old pattern? Species–area relationships across golf courses in Karnataka.</li>
-      <li><strong>Book Review (2024):</strong> <em>Urban Evolutionary Biology</em>, Journal of Animal Diversity.</li>
+      <li>Manuscript in preparation: Urban–rural morphometric divergence in geckos.</li>
+      <li>Submitted: Species–area relationships across golf courses in Karnataka.</li>
+      <li>Book Review (2024): <em>Urban Evolutionary Biology</em>, Journal of Animal Diversity.</li>
     </ul>
   </div>
 </section>
@@ -218,21 +221,20 @@
   <h2>Conference Talks & Posters</h2>
   <div class="card">
     <ul>
-      <li><strong>SICB 2026 (USA):</strong> Oral presentation — <em>Climbing the urban ladder: Locomotor performance of urban and rural geckos in Bengaluru, India</em>.</li>
-      <li><strong>International Conference on Behavioural Studies & Environmental Influence (2025):</strong> Oral presentation on urban morphometric adaptation in <em>Cnemaspis mysoriensis</em>.</li>
-      <li><strong>ISEB 2024:</strong> Poster presentation on morphometric variation in <em>Hemidactylus parvimaculatus</em>.</li>
+      <li><strong>SICB 2026 (USA)</strong> — Oral Presentation</li>
+      <li>ISEB 2024 — Poster Presentation</li>
+      <li>WFCCP 2025 — Oral Presentation</li>
     </ul>
   </div>
 </section>
 
 <section id="teaching">
-  <h2>Teaching & Courses</h2>
+  <h2>Teaching</h2>
   <div class="card">
     <ul>
-      <li>Guest Faculty — Climate Change & Sustainability (MA English), JAIN University</li>
-      <li>Guest Faculty — Environmental Science (BA Design), JAIN University</li>
-      <li>Guest Faculty — Research Methodology (MA Communication Design)</li>
-      <li>Visiting Faculty — Environmental Science, MS Ramaiah College</li>
+      <li>Guest Faculty — Climate Change & Sustainability (MA English)</li>
+      <li>Guest Faculty — Environmental Science (BA Design)</li>
+      <li>Guest Faculty — Research Methodology</li>
     </ul>
   </div>
 </section>
@@ -240,18 +242,50 @@
 <section id="cv">
   <h2>Curriculum Vitae</h2>
   <div class="card">
-    <p>
-      <a href="CV_Amith_SJ.pdf" target="_blank">Download CV (PDF)</a>
-    </p>
+    <a href="CV_Amith_SJ.pdf" target="_blank" download>
+      📄 Download CV (PDF)
+    </a>
   </div>
 </section>
 
 <section id="contact">
-  <h2>Contact</h2>
-  <div class="card contact">
-    <p>Email: <a href="mailto:amithsj104@gmail.com">amithsj104@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/amith-s-j/" target="_blank">amith-s-j</a></p>
-    <p>Affiliation: CUBEC, JAIN (Deemed-to-be University), Bengaluru, India</p>
+  <h2>Contact & Profiles</h2>
+  <div class="card">
+    <div class="icon-grid">
+
+      <a class="icon-link" href="mailto:amith.sj@jainuniversity.ac.in">
+        <i class="fa-solid fa-envelope"></i> Institutional Email
+      </a>
+
+      <a class="icon-link" href="mailto:amithsj104@gmail.com">
+        <i class="fa-solid fa-envelope"></i> Personal Email
+      </a>
+
+      <a class="icon-link" href="https://www.linkedin.com/in/amith-s-j/" target="_blank">
+        <i class="fa-brands fa-linkedin"></i> LinkedIn
+      </a>
+
+      <a class="icon-link" href="https://x.com/AmithSJ4" target="_blank">
+        <i class="fa-brands fa-x-twitter"></i> X (Twitter)
+      </a>
+
+      <a class="icon-link" href="https://bsky.app/profile/amith-sj.bsky.social" target="_blank">
+        <i class="fa-solid fa-cloud"></i> Bluesky
+      </a>
+
+      <a class="icon-link" href="https://orcid.org/0000-0002-8485-5780" target="_blank">
+        <i class="fa-brands fa-orcid"></i> ORCID
+      </a>
+
+      <a class="icon-link" href="https://scholar.google.com/citations?user=oBpLWqEAAAAJ&hl=en&authuser=2" target="_blank">
+        <i class="fa-solid fa-graduation-cap"></i> Google Scholar
+      </a>
+
+      <a class="icon-link" href="https://www.researchgate.net/profile/Amith-S-J-2" target="_blank">
+        <i class="fa-brands fa-researchgate"></i> ResearchGate
+      </a>
+
+    </div>
   </div>
 </section>
 
@@ -263,4 +297,3 @@
 
 </body>
 </html>
-
