--- a/index.html
+++ b/index.html
@@ -94,7 +94,23 @@
       margin:0.2rem;
     }
 
-    /* Social / Academic Icons */
+    /* Profile photo */
+    .profile-container{
+      display:flex;
+      align-items:center;
+      gap:1.5rem;
+      flex-wrap:wrap;
+    }
+
+    .profile-pic{
+      width:160px;
+      height:160px;
+      object-fit:cover;
+      border-radius:50%;
+      border:4px solid var(--accent);
+    }
+
+    /* Social icons */
     .icon-grid{
       display:grid;
       grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
@@ -149,15 +165,19 @@
 
 <section id="about">
   <h2>About Me</h2>
-  <div class="card">
-    <p>
-      I am a PhD Research Scholar in Zoology at <strong>JAIN (Deemed-to-be) University, Bengaluru</strong>,
-      working at the <strong>Centre for Urban Ecology, Biodiversity, Evolution & Climate Change (CUBEC)</strong>.
-    </p>
-    <p>
-      My research explores how rapid urbanisation and urban heat island effects shape morphology,
-      locomotor performance, and physiological tolerance in reptiles, using geckos as a model system.
-    </p>
+  <div class="card profile-container">
+    <img src="images/Amith.jpg" alt="Amith S J" class="profile-pic">
+    <div>
+      <p>
+        I am a PhD Research Scholar in Zoology at 
+        <strong>JAIN (Deemed-to-be) University, Bengaluru</strong>, working at the 
+        <strong>Centre for Urban Ecology, Biodiversity, Evolution & Climate Change (CUBEC)</strong>.
+      </p>
+      <p>
+        My research examines how rapid urbanisation and urban heat island effects shape morphology,
+        locomotor performance, and physiological tolerance in reptiles, using geckos as a model system.
+      </p>
+    </div>
   </div>
 </section>
 
