--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   <h2>About Me</h2>
   <div class="card profile-container">
 
-    <img src="./images/Amith.jpg" alt="Amith S J" class="profile-pic">
+    <img src="./images/amith.jpg" alt="Amith S J" class="profile-pic">
 
     <div>
       <p>
