--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   <h2>About Me</h2>
   <div class="card profile-container">
 
-    <img src="./images/amith.jpg" alt="Amith S J" class="profile-pic">
+    <img src="./amith.jpg" alt="Amith S J" class="profile-pic">
 
     <div>
       <p>
@@ -190,7 +190,7 @@
 <section id="research">
   <h2>Research Interests</h2>
   <div class="grid">
-    <div class="card"><strong>Urban Evolution</strong><p>Urban–rural divergence and adaptation.</p></div>
+    <div class="card"><strong>Urban Ecology and Evolution</strong><p>Urban–rural divergence and adaptation.</p></div>
     <div class="card"><strong>Thermal Biology</strong><p>CTmax, CTmin, thermal performance.</p></div>
     <div class="card"><strong>Performance Ecology</strong><p>Locomotion, sprint speed, climbing.</p></div>
     <div class="card"><strong>Climate Change Biology</strong><p>Urban heat islands as climate analogues.</p></div>
@@ -302,3 +302,15 @@
       <a class="icon-link" href="https://orcid.org/0000-0002-8485-5780" target="_blank">
         <i class="fa-brands fa-orcid"></i> ORC
 
+    </div>
+  </div>
+</section>
+
+</main>
+
+<footer>
+  © 2026 Amith S J | Academic Research Profile
+</footer>
+
+</body>
+</html>
