--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
       object-fit:cover;
       border-radius:50%;
       border:4px solid var(--accent);
-      display:block; /* IMPORTANT FIX */
+      display:block;
+       margin-top:12px;/* IMPORTANT FIX */
     }
 
     /* Social icons */
