--- a/index.html
+++ b/index.html
@@ -229,11 +229,21 @@
   <h2>Awards & Fellowships</h2>
   <div class="card">
     <ul>
-      <li><strong>IDEA WILD International Equipment Grant Awardee</strong></li>
-      <li><em>Additional awards and fellowships to be added.</em></li>
+      <li>
+        <strong>SICB Charlotte Mangum Award Recipient</strong><br>
+        Awarded by the Society for Integrative and Comparative Biology (SICB)
+        in support of international participation and presentation at SICB 2026.
+      </li>
+
+      <li>
+        <strong>IDEA WILD International Equipment Grant Awardee</strong><br>
+        Recipient of a competitive international research equipment grant
+        supporting doctoral research in urban evolutionary ecology.
+      </li>
     </ul>
   </div>
 </section>
+
 
 <section id="talks">
   <h2>Conference Talks & Posters</h2>
